--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ a {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     left: 0;
     top: 0;
     width: 100%;
@@ -273,8 +273,9 @@ a {
     background-color: #ff3333;
     margin: 6px 0;
     border-radius: 5px;
-    transition: 1.4s;
 }
+
+.transiton {}
 
 .change .bar1 {
     -webkit-transform: rotate(-45deg) translate(-9px, 6px);
