--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background: black;
     background: linear-gradient(0deg, #FF5555 0%, #ffdd00 100%);
     width: 400px;
-    height: 315px;
+    /* height: 315px; */
     border-radius: 5px;
 }
 
@@ -52,10 +52,10 @@ a {
 }
 
 .title {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     color: #ffffff;
     text-align: center;
-    margin: 15px;
+    margin: 0px auto 5px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -235,6 +235,21 @@ a {
     border-radius: 5px;
 }
 
+.content-time {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: white;
+}
+
+.current-time {
+    padding: 0px 20px;
+}
+
+.duration {
+    padding: 0px 20px;
+}
+
 .handle {
     position: absolute;
     margin-top: -14px;
@@ -251,21 +266,21 @@ a {
     text-align: center;
     position: absolute;
     background: white;
-    width: 30px;
-    height: 20px;
+    width: 39px;
+    height: 24px;
     color: #202c3d;
     bottom: 30px;
     flex-direction: column;
     justify-content: center;
     border-radius: 10px;
-    left: -5px;
+    left: -10px;
 }
 
 .move-time::before {
     content: "";
     position: absolute;
     color: #ffffff;
-    bottom: -8px;
+    bottom: -10px;
     top: initial;
     margin-left: 5px;
     border-left: 10px solid transparent;
@@ -273,6 +288,7 @@ a {
     border-top: 10px solid;
     border-bottom: 0;
     border-top-color: inherit;
+    left: 5px;
 }
 
 .container {
@@ -406,6 +422,7 @@ label {
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
     cursor: pointer;
+    z-index: +1;
 }
 
 .opacity {
@@ -881,7 +898,7 @@ label {
     0% {
         width: 150px;
         height: 150px;
-        transform: translate(-100px, -27px);
+        transform: translate(-100px, -51px);
     }
     100% {}
 }
@@ -890,7 +907,7 @@ label {
     0% {
         width: 150px;
         height: 150px;
-        transform: translate(-100px, -27px);
+        transform: translate(-100px, -51px);
     }
     100% {}
 }
