--- a/style.css
+++ b/style.css
@@ -276,6 +276,36 @@ a {
     left: -10px;
 }
 
+.move-time-current {
+    display: none;
+    text-align: center;
+    position: absolute;
+    background: white;
+    width: 39px;
+    height: 24px;
+    color: #202c3d;
+    bottom: 16px;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 10px;
+    left: -10px;
+}
+
+.move-time-current::before {
+    content: "";
+    position: absolute;
+    color: #ffffff;
+    bottom: -10px;
+    top: initial;
+    margin-left: 5px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid;
+    border-bottom: 0;
+    border-top-color: inherit;
+    left: 5px;
+}
+
 .move-time::before {
     content: "";
     position: absolute;
@@ -726,6 +756,37 @@ label {
     transition: 0.4s;
 }
 
+.modal-news {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    text-align: center;
+    transition: 1s;
+}
+
+.content-news {
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.versions {
+    font-weight: normal;
+}
+
 .yes-no-new {
     display: flex;
     justify-content: space-around;
@@ -739,6 +800,7 @@ label {
 
 #New {
     background-color: #efbf00;
+    color: white;
 }
 
 .no-conect-btn {
@@ -761,6 +823,20 @@ label {
 
 .no-conect-btn:active {
     background-color: #172334;
+}
+
+.yesNews {
+    background-color: #efbf00;
+}
+
+.yesNews-disable {
+    background-color: #8E8E8E;
+    color: rgb(200 200 200);
+    cursor: default;
+}
+
+.yesNews-disable:hover {
+    border: none;
 }
 
 .loader {
