--- a/style.css
+++ b/style.css
@@ -278,13 +278,15 @@ a {
 
 .move-time-current {
     display: none;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     position: absolute;
     background: white;
     width: 39px;
     height: 24px;
     color: #202c3d;
-    bottom: 16px;
+    bottom: 24px;
     flex-direction: column;
     justify-content: center;
     border-radius: 10px;
