--- a/style.css
+++ b/style.css
@@ -779,8 +779,7 @@ label {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.85);
     text-align: center;
     transition: 1s;
 }
@@ -801,6 +800,42 @@ label {
 .yes-no-new {
     display: flex;
     justify-content: space-around;
+}
+
+.list-changes-coontent {
+    padding-bottom: 40px;
+}
+
+.version-changes {
+    text-align: start;
+}
+
+.filter {
+    backdrop-filter: blur(3px);
+    position: fixed;
+    width: 400px;
+    height: 40px;
+    bottom: 0px;
+}
+
+#scroll-bar::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+}
+
+#scroll-bar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: linear-gradient(0deg, #FF5555 0%, #ffdd00 100%);
+}
+
+#listMenu::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+}
+
+#listMenu::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: linear-gradient(0deg, #FF5555 0%, #ffdd00 100%);
 }
 
 #Yes {
@@ -838,11 +873,13 @@ label {
 
 .yesNews {
     background-color: #efbf00;
+    position: fixed;
+    bottom: 0px;
 }
 
 .yesNews-disable {
     background-color: #8E8E8E;
-    color: rgb(200 200 200);
+    color: rgb(200, 200, 200);
     cursor: default;
 }
 
