--- a/style.css
+++ b/style.css
@@ -616,7 +616,6 @@ a {
 
 .item-track {
     display: flex;
-    flex-wrap: wrap;
     padding: 5px;
     margin: 5px 0px 5px 0px;
     font-size: 1.1rem;
@@ -627,9 +626,7 @@ a {
 
 .item-track:hover {
     background: rgb(0 0 0 / 65%);
-    padding: 10px;
-    /* font-size: 1.2rem; */
-    color: white;
+    padding: 15px 5px 15px 5px;
     border-radius: 5px;
 }
 
@@ -654,7 +651,6 @@ a {
 
 .content-item-name {
     align-self: center;
-    max-width: 205px;
     overflow-wrap: anywhere;
 }
 
@@ -850,7 +846,6 @@ label {
     display: flex;
     flex-direction: column;
     overflow: auto;
-    height: 235px;
 }
 
 .settings {
@@ -985,7 +980,6 @@ label {
 }
 
 .support-menu {
-    position: absolute;
     color: white;
     width: 100%;
     height: 50px;
