--- a/style.css
+++ b/style.css
@@ -144,7 +144,15 @@ a {
 
 .like {
     cursor: pointer;
-    background-image: url(img/disliked.png);
+    background-image: url(img/notLike.png);
+    background-repeat: no-repeat, repeat;
+    background-position: center;
+}
+
+.dislike {
+    display: none;
+    cursor: pointer;
+    background-image: url(img/dislike.svg);
     background-repeat: no-repeat, repeat;
     background-position: center;
 }
@@ -574,6 +582,30 @@ a {
     left: 5px;
 }
 
+.notification {
+    position: absolute;
+    width: 410px;
+    height: 40px;
+    left: 0px;
+    top: 0px;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 0px 0px 5px 5px;
+    color: white;
+    display: none;
+    justify-content: center;
+    z-index: +5;
+    backdrop-filter: blur(4px);
+}
+
+.h2-notification {
+    font-style: normal;
+    font-weight: 400;
+    align-items: center;
+    text-align: center;
+    align-self: center;
+    line-height: 20px;
+}
+
 .container {
     position: absolute;
     display: inline-block;
@@ -623,7 +655,24 @@ a {
 }
 
 .list-dislike {
-    background-image: url(img/disliked.png);
+    background-image: url(img/notLike.png);
+    background-repeat: no-repeat, repeat;
+    background-position: center;
+    min-width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 5px;
+    background-size: contain;
+    align-self: center;
+    margin-left: auto;
+    border-radius: 10px;
+    transition: 1s;
+    transition-property: background-image;
+    filter: drop-shadow(0px 0px 3px rgb(0 0 0 / 70%));
+}
+
+.list-disliked {
+    background-image: url(img/disliked.svg);
     background-repeat: no-repeat, repeat;
     background-position: center;
     min-width: 40px;
@@ -1477,6 +1526,33 @@ label {
     animation: scale-in-center 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+.slide-bottom {
+    -webkit-animation: slide-bottom 700ms;
+    animation: slide-bottom 700ms;
+}
+
+@-webkit-keyframes slide-bottom {
+    0% {
+        -webkit-transform: translateY(-40px);
+        transform: translateY(-40px);
+    }
+    100% {
+        -webkit-transform: translateY(0%);
+        transform: translateY(0%);
+    }
+}
+
+@keyframes slide-bottom {
+    0% {
+        -webkit-transform: translateY(-40px);
+        transform: translateY(-40px);
+    }
+    100% {
+        -webkit-transform: translateY(0%);
+        transform: translateY(0%);
+    }
+}
+
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
@@ -1785,7 +1861,7 @@ label {
         opacity: 0.15;
     }
     100% {
-        height: 215px;
+        height: 235px;
         opacity: 1;
     }
 }
@@ -1796,7 +1872,7 @@ label {
         opacity: 0.15;
     }
     100% {
-        height: 215px;
+        height: 235px;
         opacity: 1;
     }
 }
