--- a/style.css
+++ b/style.css
@@ -122,7 +122,6 @@ a {
 
 .pause {
     cursor: pointer;
-    cursor: pointer;
     background-image: url(img/pause.png);
     background-repeat: no-repeat, repeat;
     background-position: center;
@@ -225,6 +224,10 @@ a {
     padding-right: 25px;
 }
 
+.content-groove-volume:hover {
+    padding-right: 25px;
+}
+
 .hide-volume {
     animation: hide-volume 300ms;
 }
@@ -291,7 +294,7 @@ a {
 .modal {
     display: none;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -585,7 +588,7 @@ a {
 .notification {
     position: absolute;
     width: 410px;
-    height: 40px;
+    height: auto;
     left: 0px;
     top: 0px;
     background: rgba(0, 0, 0, 0.4);
@@ -628,6 +631,25 @@ a {
     z-index: +3;
     top: 0px;
     right: 5px;
+}
+
+.popup-btn-container {
+    position: absolute;
+    right: 50px;
+    top: 3px;
+}
+
+.popup-btn {
+    cursor: pointer;
+    background-image: url(img/popup.svg);
+    background-repeat: no-repeat, repeat;
+    background-position: center;
+    width: 35px;
+    height: 35px;
+    background-size: contain;
+    background-repeat: no-repeat, repeat;
+    background-position: center;
+    transition: 1s;
 }
 
 .list-track {
@@ -1221,6 +1243,70 @@ label {
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
+}
+
+.container-reassign {
+    background: #ff4444;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+.content-reassign {
+    background: #ff7766;
+    padding: 5px;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.shortcut-key {
+    background: #ff5555;
+    border-radius: 3px;
+    text-align: center;
+    margin: 2px;
+}
+
+.shortcut-key:hover {
+    background: #ff3333;
+    border-radius: 3px;
+    text-align: center;
+    margin: 2px;
+}
+
+.list-shortcut-keys {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 5px;
+    background: #ff4444;
+}
+
+.select-shortcut-key {
+    transition: 0.7s;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.select-shortcut-key:hover {
+    background: #FF3333;
+}
+
+.select-shortcut-key:after {
+    content: "\f107";
+    color: inherit;
+    margin-left: 10px;
+}
+
+.submenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    -webkit-transition: 0.5s ease-in-out;
+    -moz-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 
 #n1 {
@@ -1861,7 +1947,7 @@ label {
         opacity: 0.15;
     }
     100% {
-        height: 235px;
+        height: 640px;
         opacity: 1;
     }
 }
@@ -1872,7 +1958,7 @@ label {
         opacity: 0.15;
     }
     100% {
-        height: 235px;
+        height: 640px;
         opacity: 1;
     }
 }
