--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ a {
 
 .toggle-shuffle {
     cursor: pointer;
-    background-image: url(img/toggleShuffle.svg);
+    background-image: url(img/shuffle.svg);
     background-repeat: no-repeat, repeat;
     background-position: center;
     background-size: 25px;
@@ -179,7 +179,7 @@ a {
 
 .toggle-repeat {
     cursor: pointer;
-    background-image: url(img/toggleRepeat.svg);
+    background-image: url(img/repeat.svg);
     background-repeat: no-repeat, repeat;
     background-position-x: center;
     background-position-y: -6px;
@@ -196,7 +196,7 @@ a {
 
 .toggle-volume {
     cursor: pointer;
-    background-image: url(img/setVolume.svg);
+    background-image: url(img/volumeMax.svg);
     background-repeat: no-repeat, repeat;
     background-position: center;
     background-position-y: -5px;
