--- a/stylePopup.css
+++ b/stylePopup.css
@@ -150,16 +150,28 @@ body {
 .content-track-artist {
     float: right;
     align-self: center;
-    width: unset;
+    width:  calc(100% - 110px);
     margin-right: 30px;
 }
 
 .name-track {
     font-size: 1rem;
+    text-align: left;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    transition: 0.7s;
 }
 
 .name-artists {
     font-size: 1rem;
+    text-align: left;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    transition: 0.7s;
 }
 
 .content-toggle {
@@ -182,7 +194,7 @@ body {
 
 .item-track {
     padding: 7px;
-    height: 20px;
+    min-height: 20px;
 }
 
 .selected-item {
@@ -282,8 +294,8 @@ body {
 
 @media screen and (min-height: 370px) {
     .cover {
-        width: 45px;
-        height: 45px;
+        min-width: 45px;
+        min-height: 45px;
     }
     .name-track {
         font-size: 1.1rem;
